# thalassa-marine-weather

./: .browserslistrc  .env  .env.example  .gitignore  .prettierignore  .prettierrc  .vercelignore  ARCHITECTURE.md  App.tsx  ApplicationShell.tsx  CONTRIBUTING.md  IMPLEMENTATION_NOTES.md  INFRASTRUCTURE.md  README.md  SECURITY.md  capacitor.config.ts  clean_hero.py  comprehensive_repair.py  debug_tides.ts  env.d.ts  eslint.config.js  fix_syntax.js  index.css  index.html  index.tsx  lighthouserc.json  logs.html  manifest.json  mapbox_test.json  metadata.json  middleware.ts  package-lock.json  package.json  plan.html  playwright.config.ts  repair_hero.py  sw.js  tailwind.config.js  test-loc.js  test-map.js  (+13 more)
.claude/: .gitignore  launch.json
.github/: BRANCH_PROTECTION.md  dependabot.yml
.storybook/: main.ts  preview.ts
api/: spread.ts  wx.ts
backend/: __init__.py  etopo_tile_downloader.py  gebco_ingest.py  gebco_tile_generator.py  generate_global_cog.py  marine_router.py  requirements.txt  ww3_cron.sh  ww3_precache.py
bosun-pi/: 50-bosun-network.rules  bosun-voyage-ping.service  bosun-voyage-ping.timer  bosun_n2k_api.py  bosun_network_api.py  bosun_network_apply.py  bosun_voyage_ping.py  calypso-network-decide  calypso-network-decide.service  install-n2k.sh  install-voyage-ping.sh  install.sh  n2k-setup.md  voyage-ping-setup.md  voyage-ping.env.example
cloudflare-worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
components/: AddEntryModal.tsx  AdminPanel.tsx  AnchorStatusIndicator.tsx  AnchorWatchPage.tsx  AuthModal.tsx  BuilderDeepLink.tsx  ChandleryPage.tsx  ChatHub.tsx  ChatPage.tsx  Clock.tsx  CommunityTrackBrowser.tsx  CompassPage.tsx  CrewManagement.tsx  Dashboard.tsx  DateGroupedTimeline.tsx  DatingSwipePage.tsx  DebugConsole.tsx  DebugPanel.tsx  DeleteVoyageModal.tsx  DepthDisplay.tsx  DiaryPage.tsx  EditEntryModal.tsx  ErrorBoundary.tsx  FavoritesBar.tsx  FollowRouteBadge.tsx  ForecastSheet.tsx  GpsTrackingIndicator.tsx  GuardianPage.tsx  IOSInstallPrompt.tsx  Icons.tsx  LiveMiniMap.tsx  LocationStarMenu.tsx  LogFilterToolbar.tsx  LonelyHeartsPage.tsx  MarketplacePage.tsx  MarketplaceThread.tsx  MiniTrackMap.tsx  NavButton.tsx  NmeaConnectionBadge.tsx  NmeaGpsIndicator.tsx  (+29 more)
context/: AuthContext.tsx  FollowRouteContext.tsx  NetworkModeContext.ts  SettingsContext.tsx  ThalassaContext.tsx  ThemeContext.tsx  UIContext.tsx  WeatherContext.tsx
contexts/: CrewCountContext.tsx
coverage/: lcov.info
data/: chandleryCategories.ts  customsDb.ts  index.ts  locationData.ts  polarDatabase.ts  storeOne.products.ts
docs/: AI_COLLAB.md  ANCHOR_WATCH_SWIFT_TODO.md  BOSUN_AI_SPEC.md  BOSUN_CHART_MODES_HANDOFF.md  BOSUN_HAIKU_ARCHITECTURE.md  BOSUN_NETWORK_SETUP_API.md  BOSUN_TOOL_API.md  CODE_AUDIT_CANDIDATES.md  ENC_AUDIT_2026-07-17_closing.md  ENC_AUDIT_2026-07-17_open.md  ENC_AUDIT_2026-07-18_closing.md  ENC_AUDIT_2026-07-19_closing.md  ENC_BURNDOWN_2026-07-16.md  ENC_BURNDOWN_2026-07-17.md  ENC_BURNDOWN_2026-07-18.md  ENC_BURNDOWN_2026-07-19.md  ENC_BURNDOWN_2026-07-20.md  ENC_INTEGRATION.md  ENC_VECTORLAYER_CARVE.md  HANDOVER_2026-07-18_fable-to-opus.md  INSHORE_ROUTING_MASTERPLAN.md  INSHORE_ROUTING_STATUS.md  PHASE_14_PIVOT.md  PHASE_14_SPIKE.md  ROUTE_TRACER_MASTERPLAN.md  ROUTING_COLLAB.md  THALASSA_FOR_BOSUN.md  THREE_TIER_ROUTING.md  apple-watch-companion.md
e2e/: accessibility.spec.ts  anchor-watch.spec.ts  chat.spec.ts  critical-path.spec.ts  dashboard.spec.ts  diary.spec.ts  navigation.spec.ts  onboarding.spec.ts  settings.spec.ts  ship-log.spec.ts  smoke.spec.ts  weather-map.spec.ts
hooks/: useAccessibility.ts  useAppBootstrap.ts  useAppController.ts  useChandleryBasket.ts  useCrewFinderActions.ts  useCrewFinderState.ts  useDashboardController.ts  useDeviceMode.ts  useDiaryState.ts  useEntitlement.ts  useFocusTrap.ts  useSwipeable.ts  (+27 more)
opencpn-bridge/: .gitignore  CMakeLists.txt  README.md  build-mac.sh  build-pi.sh
opencpn-bridge/src/: feature_extractor.cpp  feature_extractor.h  http_server.cpp  http_server.h  thalassa_bridge_pi.cpp  thalassa_bridge_pi.h
(+2421 files in other folders)
